--- a/src/metabol.subsystem-analyze/components/concentration-table/concentration-table.component.html
+++ b/src/metabol.subsystem-analyze/components/concentration-table/concentration-table.component.html
@@ -9,7 +9,7 @@
   <div class="form-group col-md-4">
     <label>Public or Private</label>
     <div>
-      <md-slide-toggle [formControl]="isPublic">{{ isPublic.value ? 'Public' : 'Private' }}</md-slide-toggle>
+      <mat-slide-toggle [formControl]="isPublic">{{ isPublic.value ? 'Public' : 'Private' }}</mat-slide-toggle>
     </div>
   </div>
 </div>
