--- a/src/agb.search-engine/components/species-detail/species-detail.component.html
+++ b/src/agb.search-engine/components/species-detail/species-detail.component.html
@@ -6,11 +6,11 @@
   </div>
   <table class="table table-hover">
     <tbody>
-      <tr *ngFor="let r of genes">
+      <tr *ngFor="let r of lists">
         <td class="col-md-4">
-          <a [routerLink]="['/gene', r.id]">
-              {{r.name}}
-            </a>
+          <!-- <a [routerLink]="['/gene', r.id]"> -->
+              {{r.ptn}}
+            <!-- </a> -->
         </td>
       </tr>
     </tbody>
