--- a/src/agb.search-engine/components/species-detail/species-detail.component.html
+++ b/src/agb.search-engine/components/species-detail/species-detail.component.html
@@ -8,9 +8,9 @@
     <tbody>
       <tr *ngFor="let r of lists">
         <td class="col-md-4">
-          <!-- <a [routerLink]="['/gene', r.id]"> -->
+          <a [routerLink]="['/gene', r.id]">
               {{r.ptn}}
-            <!-- </a> -->
+            </a>
         </td>
       </tr>
     </tbody>
