--- a/src/agb.search-engine/components/species-detail/species-detail.component.html
+++ b/src/agb.search-engine/components/species-detail/species-detail.component.html
@@ -6,10 +6,10 @@
   </div>
   <table class="table table-hover">
     <tbody>
-      <tr *ngFor="let r of lists">
+      <tr *ngFor="let g of genes">
         <td class="col-md-4">
-          <a [routerLink]="['/gene', r.id]">
-              {{r.ptn}}
+          <a [routerLink]="['/gene', g]">
+              {{g}}
             </a>
         </td>
       </tr>
