--- a/src/agb.search-engine/components/species-detail/species-detail.component.html
+++ b/src/agb.search-engine/components/species-detail/species-detail.component.html
@@ -26,7 +26,7 @@
     <div class="row">
       <div class="col-md-5">
         <ul class="list-group">
-          <li class="list-group-item" *ngFor="let g of genes | orderBy">
+          <li class="list-group-item" *ngFor="let g of genes | orderBy | paginate: { itemsPerPage: 10, currentPage: p }">
             <nav>
             <a [routerLink]="['./', g.ptn]" routerLinkActive="active">
               {{ g.name }}
@@ -34,6 +34,7 @@
           </nav>
           </li>
         </ul>
+        <pagination-controls (pageChange)="p = $event"></pagination-controls>
       </div>
       <div class="col-md-6">
         <router-outlet></router-outlet>
