--- a/src/agb.search-engine/components/search-bar/search-bar.component.html
+++ b/src/agb.search-engine/components/search-bar/search-bar.component.html
@@ -7,7 +7,7 @@
   </span>
 </div>
 
-<div class="container-fluid">
+<!-- <div class="container-fluid">
   <div class="row">
     <div class="size-of-bar" *ngIf="filteredgenes.length > 0 || filteredmetabolites.length > 0">
 
@@ -43,4 +43,4 @@
 
     </div>
   </div>
-</div>
+</div> -->
