--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 @import 'https://fonts.googleapis.com/icon?family=Material+Icons';
+@import '~angular-tree-component/dist/angular-tree-component.css';
 
 .glyphicon-remove {
     color: red;
