--- a/src/agb.search-engine/components/species/species.component.html
+++ b/src/agb.search-engine/components/species/species.component.html
@@ -3,6 +3,7 @@
       Species
     </h3>
 </div>
+<div class="col-md-5">
 <tree-root
       #tree
       [nodes]="nodes"
@@ -11,7 +12,7 @@
       (activate)="onEvent($event)"
 >
 </tree-root>
-
+</div>
 <div class="col-md-5">
 <router-outlet></router-outlet>
 </div>
