--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,9 +17,9 @@
       <button mat-button [matMenuTriggerFor]="browseMenu">
 	Browse
       </button>
-      <button mat-button>
+      <!-- <button mat-button>
 	Contact
-      </button>
+      </button> -->
       <!-- <button mat-button [routerLink]="['login']" *ngIf="!loginService.isLoggedIn()">
 	Login
       </button> -->
