--- a/src/agb.search-engine/components/species-detail/species-detail.component.html
+++ b/src/agb.search-engine/components/species-detail/species-detail.component.html
@@ -1,7 +1,7 @@
-<div class="panel panel-default">
+<div>
   <div class="panel-heading">
     <h3 class="panel-title">
-      Genes (total {{genes.length}})
+      Genes (total {{genes.length}}) of {{species}}
     </h3>
   </div>
   <table class="table table-hover" style="width:100%">
