--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,8 @@
   <div class="container">
     <div class="navbar-header">
       <a class="navbar-brand" id="logo"  [routerLink]="['search']">
-        <img src="assets/img/panther_logo.jpg" alt=""/>
-        <span>Ancestral Genome Browser - 0.0.1</span>
+        <!-- <img src="assets/img/panther_logo.jpg" alt=""/> -->
+        <span>Ancestral Genomes - 0.0.1</span>
       </a>
     </div>
     <div class="nav navbar-nav navbar-right">
